--- a/wsgi/openshift/templates/verifier/home.html
+++ b/wsgi/openshift/templates/verifier/home.html
@@ -6,4 +6,4 @@ let's <a href="/admin">admin </a>
 <br />
 Enjoy!!!
 
-    <img src="{% static "verifier/kitten.jpg" %}" alt=""/>
+    <img src="{% static 'verifier/kitten.jpg' %}" alt=""/>
