Gender edit WIP.

--- a/wsgi/openshift/templates/verifier/gender.html
+++ b/wsgi/openshift/templates/verifier/gender.html
@@ -9,9 +9,7 @@
 {#    <link rel="stylesheet" href="{% static 'verifier/login.css' %}"/>#}
 {% endblock %}
 
+{% load crispy_forms_tags %}
 {% block body %}
-    <form action="" method="POST">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save"/>
-    </form>
+    {% crispy form %}
 {% endblock %}
