--- a/wsgi/openshift/verifier/static/verifier/base.css
+++ b/wsgi/openshift/verifier/static/verifier/base.css
@@ -4,7 +4,7 @@
     padding: 15px;
 }
 
-.form-standard input {
+.form-standard input,select {
     width: 100%;
     margin-bottom: 10px;
     padding: 5px;
@@ -14,6 +14,6 @@
     
 }
 
-.help-block {
+.help-inline {
     color: #7c0e1b;
 }
