Added gender list.

--- a/wsgi/openshift/templates/verifier/base.html
+++ b/wsgi/openshift/templates/verifier/base.html
@@ -22,8 +22,10 @@
     {% include "verifier/navbar_content.html" %}
 </nav>
 
-{% block body %}
-{% endblock %}
+<div class="panel panel-main">
+    {% block body %}
+    {% endblock %}
+</div>
 
 </body>
 </html>
