--- a/wsgi/openshift/templates/verifier/navbar_content.html
+++ b/wsgi/openshift/templates/verifier/navbar_content.html
@@ -17,7 +17,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Genders <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="/data/genders">View</a></li>
-                    <li><a href="/data/gender">Add</a></li>
+                    <li><a href="/data/genders/new">Add</a></li>
                 </ul>
             </li>
         </ul>
