--- a/wsgi/openshift/verifier/static/verifier/base.css
+++ b/wsgi/openshift/verifier/static/verifier/base.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #F5F5F5;
+}
+
 .form-standard {
     max-width: 8cm;
     margin: 0 auto;
@@ -11,9 +15,14 @@
 }
 
 .form-standard .control-label {
-    
+
 }
 
 .help-inline {
     color: #7c0e1b;
+}
+
+div.panel-main {
+    width: 80%;
+    margin: auto;
 }
