--- a/wsgi/openshift/templates/verifier/navbar_content.html
+++ b/wsgi/openshift/templates/verifier/navbar_content.html
@@ -20,6 +20,13 @@
                     <li><a href="/data/genders/new">Add</a></li>
                 </ul>
             </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Subreddits <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="/data/subreddits">View</a></li>
+                    <li><a href="#" disabled>Add</a></li>
+                </ul>
+            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
