Added 'add subreddit' functionality.

--- a/wsgi/openshift/templates/verifier/subreddits.html
+++ b/wsgi/openshift/templates/verifier/subreddits.html
@@ -13,7 +13,7 @@
 
     <div class="panel">
         <h2>Subreddits
-            <a href="/data/subreddit/new" class="btn btn-success" disabled>Add</a>
+            <a href="/data/subreddits/new" class="btn btn-success">Add</a>
         </h2>
         <div class="panel-body">
             <ul class="list-group">
