--- a/wsgi/openshift/templates/verifier/navbar_content.html
+++ b/wsgi/openshift/templates/verifier/navbar_content.html
@@ -24,7 +24,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Subreddits <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="/data/subreddits">View</a></li>
-                    <li><a href="#" disabled>Add</a></li>
+                    <li><a href="/data/subreddits/new">Add</a></li>
                 </ul>
             </li>
         </ul>
