WIP forms, working alerts.

--- a/wsgi/openshift/templates/verifier/gender.html
+++ b/wsgi/openshift/templates/verifier/gender.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block includes %}
-{#    <link rel="stylesheet" href="{% static 'verifier/login.css' %}"/>#}
+    <script src="{% static 'verifier/gender.js' %}"></script>
 {% endblock %}
 
 {% load crispy_forms_tags %}
