--- a/wsgi/openshift/verifier/static/verifier/base.css
+++ b/wsgi/openshift/verifier/static/verifier/base.css
@@ -3,15 +3,18 @@ body {
 }
 
 .form-standard {
-    max-width: 8cm;
+    /*max-width: 8cm;*/
     margin: 0 auto;
     padding: 15px;
 }
 
 .form-standard input,select {
-    width: 100%;
     margin-bottom: 10px;
     padding: 5px;
+}
+
+.form-standard div.controls label {
+    margin-left: 20px;
 }
 
 .form-standard .control-label {
