--- a/wsgi/openshift/templates/verifier/navbar_content.html
+++ b/wsgi/openshift/templates/verifier/navbar_content.html
@@ -31,6 +31,7 @@
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
                 <li><a>Logged in as {{ user.username }}</a></li>
+                <li class="active"><a href="/credentials">Edit Reddit credentials</a></li>
                 <li class="active"><a href="/logout">Logout</a></li>
             {% else %}
                 <li><a>Not logged in</a></li>
