Renamed Gender to UserType.

--- a/wsgi/openshift/templates/verifier/usertype_subreddits.html
+++ b/wsgi/openshift/templates/verifier/usertype_subreddits.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    Gender subreddits
+    User Type Subreddits
 {% endblock %}
 
 {% block includes %}
