--- a/wsgi/openshift/templates/verifier/navbar_content.html
+++ b/wsgi/openshift/templates/verifier/navbar_content.html
@@ -14,10 +14,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Genders <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">User Types <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="/data/genders">View</a></li>
-                    <li><a href="/data/genders/new">Add</a></li>
+                    <li><a href="/data/usertypes">View</a></li>
+                    <li><a href="/data/usertypes/new">Add</a></li>
                 </ul>
             </li>
             <li class="dropdown">
