--- a/wsgi/openshift/templates/verifier/usertypes.html
+++ b/wsgi/openshift/templates/verifier/usertypes.html
@@ -12,16 +12,16 @@
 {% block body %}
 
 
-    <h2>Subreddits
-        <a href="/data/subreddits/new" class="btn btn-success">Add</a>
+    <h2>User Types
+        <a href="/data/usertypes/new" class="btn btn-success">Add</a>
     </h2>
     <div class="panel-body">
         <ul class="list-group">
-            {% for subreddit in object_list %}
+            {% for usertype in object_list %}
                 <li class="list-group-item">
-                    {{ subreddit.name }}
-                    <a href="/data/subreddits/{{ subreddit.id }}" class="btn">Edit</a>
-                    {#                        <a href="#" class="btn" disabled>View Subreddits</a>#}
+                    {{ usertype.name }}
+                    <a href="/data/usertypes/{{ usertype.id }}" class="btn">Edit</a>
+                    <a href="/data/usertypes/{{ usertype.id }}/subreddits" class="btn">Manage flair</a>
                     <a href="#" class="btn btn-danger" disabled>Delete</a>
                 </li>
             {% endfor %}
